test/classes/errors/nilability-init-field-dflt/init-field-dflt-nonnil-owned-from-oknil-nil.good
init-field-dflt-nonnil-owned-from-oknil-nil.chpl:11: error: default-initializing a field with a non-nilable type owned MyClass from nil
